// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion component should render an accordion 1`] = `
<div
  className="mb-8 w-full p-4 sm:p-8 lg:px-6 xl:px-8"
>
  <button
    className="flex w-full text-left"
    onClick={[Function]}
  >
    <div
      className="w-full"
    >
      <h4
        className="mt-1.5 font-['MuseoSans'] text-lg font-semibold text-shade-greyscale-grey-900"
      >
        Terms and Conditions
      </h4>
    </div>
    <div
      className="mr-5 flex h-10 w-full max-w-[40px] items-center justify-center"
    >
      <span
        className="icon inline-flex h-12 w-full max-w-[32px] items-center justify-center text-3xl font-semibold text-[#001B80]"
      >
        +
      </span>
    </div>
  </button>
  <div
    className="duration-200 ease-in-out hidden"
  >
    <span
      className="font-['MuseoSans'] py-3 text-shade-greyscale-grey-900 whitespace-pre-wrap"
    >
      This is an accordion message.
    </span>
  </div>
</div>
`;

exports[`Accordion component should render an accordion with bold text 1`] = `
<div
  className="mb-8 w-full p-4 sm:p-8 lg:px-6 xl:px-8"
>
  <button
    className="flex w-full text-left"
    onClick={[Function]}
  >
    <div
      className="w-full"
    >
      <h4
        className="mt-1.5 font-['MuseoSans'] text-lg font-semibold text-shade-greyscale-grey-900"
      >
        Terms and Conditions
      </h4>
    </div>
    <div
      className="mr-5 flex h-10 w-full max-w-[40px] items-center justify-center"
    >
      <span
        className="icon inline-flex h-12 w-full max-w-[32px] items-center justify-center text-3xl font-semibold text-[#001B80]"
      >
        +
      </span>
    </div>
  </button>
  <div
    className="duration-200 ease-in-out hidden"
  >
    <span
      className="font-['MuseoSans'] py-3 text-shade-greyscale-grey-900 whitespace-pre-wrap"
    >
      This is an 
      <strong>
        accordion
      </strong>
       message.
    </span>
  </div>
</div>
`;

exports[`Accordion component should render an accordion with italic text 1`] = `
<div
  className="mb-8 w-full p-4 sm:p-8 lg:px-6 xl:px-8"
>
  <button
    className="flex w-full text-left"
    onClick={[Function]}
  >
    <div
      className="w-full"
    >
      <h4
        className="mt-1.5 font-['MuseoSans'] text-lg font-semibold text-shade-greyscale-grey-900"
      >
        Terms and Conditions
      </h4>
    </div>
    <div
      className="mr-5 flex h-10 w-full max-w-[40px] items-center justify-center"
    >
      <span
        className="icon inline-flex h-12 w-full max-w-[32px] items-center justify-center text-3xl font-semibold text-[#001B80]"
      >
        +
      </span>
    </div>
  </button>
  <div
    className="duration-200 ease-in-out hidden"
  >
    <span
      className="font-['MuseoSans'] py-3 text-shade-greyscale-grey-900 whitespace-pre-wrap"
    >
      This is an 
      <em>
        accordion
      </em>
       message.
    </span>
  </div>
</div>
`;

exports[`Accordion component should render an accordion with new lines text 1`] = `
<div
  className="mb-8 w-full p-4 sm:p-8 lg:px-6 xl:px-8"
>
  <button
    className="flex w-full text-left"
    onClick={[Function]}
  >
    <div
      className="w-full"
    >
      <h4
        className="mt-1.5 font-['MuseoSans'] text-lg font-semibold text-shade-greyscale-grey-900"
      >
        Terms and Conditions
      </h4>
    </div>
    <div
      className="mr-5 flex h-10 w-full max-w-[40px] items-center justify-center"
    >
      <span
        className="icon inline-flex h-12 w-full max-w-[32px] items-center justify-center text-3xl font-semibold text-[#001B80]"
      >
        +
      </span>
    </div>
  </button>
  <div
    className="duration-200 ease-in-out hidden"
  >
    <p
      className="font-['MuseoSans'] py-3 text-shade-greyscale-grey-900 whitespace-pre-wrap"
    >
      This is an 
accordion
 message.
    </p>
  </div>
</div>
`;

exports[`Accordion component should render an accordion with strike through text 1`] = `
<div
  className="mb-8 w-full p-4 sm:p-8 lg:px-6 xl:px-8"
>
  <button
    className="flex w-full text-left"
    onClick={[Function]}
  >
    <div
      className="w-full"
    >
      <h4
        className="mt-1.5 font-['MuseoSans'] text-lg font-semibold text-shade-greyscale-grey-900"
      >
        Terms and Conditions
      </h4>
    </div>
    <div
      className="mr-5 flex h-10 w-full max-w-[40px] items-center justify-center"
    >
      <span
        className="icon inline-flex h-12 w-full max-w-[32px] items-center justify-center text-3xl font-semibold text-[#001B80]"
      >
        +
      </span>
    </div>
  </button>
  <div
    className="duration-200 ease-in-out hidden"
  >
    <del
      className="font-['MuseoSans'] py-3 text-shade-greyscale-grey-900 whitespace-pre-wrap"
    >
      This is an accordion message.
    </del>
  </div>
</div>
`;

exports[`Accordion component should render an accordion with strong text 1`] = `
<div
  className="mb-8 w-full p-4 sm:p-8 lg:px-6 xl:px-8"
>
  <button
    className="flex w-full text-left"
    onClick={[Function]}
  >
    <div
      className="w-full"
    >
      <h4
        className="mt-1.5 font-['MuseoSans'] text-lg font-semibold text-shade-greyscale-grey-900"
      >
        Terms and Conditions
      </h4>
    </div>
    <div
      className="mr-5 flex h-10 w-full max-w-[40px] items-center justify-center"
    >
      <span
        className="icon inline-flex h-12 w-full max-w-[32px] items-center justify-center text-3xl font-semibold text-[#001B80]"
      >
        +
      </span>
    </div>
  </button>
  <div
    className="duration-200 ease-in-out hidden"
  >
    <span
      className="font-['MuseoSans'] py-3 text-shade-greyscale-grey-900 whitespace-pre-wrap"
    >
      This is an 
      <strong>
        accordion
      </strong>
       message.
    </span>
  </div>
</div>
`;
